--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="../../sub-pages/about/about.html">About</a></li>
                     <li><a href="../../sub-pages/projects/project.html">Project</a></li>
                     <li><a href="../../sub-pages/service/service.html">Service</a></li>
-                    <li><a href="../../sub-pages/contact/contact.html">Contact</a></li>
+                    <li><a href="sub-pages/contact/contact.html">Contact</a></li>
                 </ul>
                 <div class="nav_contact">
                     <button class="btn btn-info">Contact -></button>
