--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 </div>
                 <ul class="list-unstyled nav-list">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="../../sub-pages/about/about.html">About</a></li>
-                    <li><a href="../../sub-pages/projects/project.html">Project</a></li>
-                    <li><a href="../../sub-pages/service/service.html">Service</a></li>
+                    <li><a href="sub-pages/about/about.html">About</a></li>
+                    <li><a href="sub-pages/projects/project.html">Project</a></li>
+                    <li><a href="sub-pages/service/service.html">Service</a></li>
                     <li><a href="sub-pages/contact/contact.html">Contact</a></li>
                 </ul>
                 <div class="nav_contact">
