about page and bugf fix

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 </ul>
             </div>
             <div class="download_broucher">
-                <button class="close_after_click"><a href="#">Download Broucher</a></button>
+                <button class="btn btn-danger"><a class="text-white" download
+                        href="../../assets/Devi Electricals portfolio.pdf">Download Brouchere</a></button>
             </div>
             <div class="nav-responsive_info">
                 <h3>Contact Info</h3>
