--- a/sub-pages/projects/project.html
+++ b/sub-pages/projects/project.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <!-- RESPONSIVE NAVIGATAION BAR -->
+        <!-- RESPONSIVE NAVIGATION BAR -->
         <div class="nav-container_responsive">
             <div class="headder-responsive_nav">
                 <div class="logo-container">
@@ -71,11 +71,11 @@
 
             <div class="nav-list">
                 <ul class="list-unstyled nav-list">
-                    <li class="close_after_click"><a href="/index.html">Home</a></li>
+                    <li class="close_after_click"><a href="/devi-electricals-pre-demo/index.html">Home</a></li>
                     <li class="close_after_click"><a href="../../sub-pages/about/about.html">About</a></li>
                     <li class="close_after_click"><a href="../../sub-pages/projects/project.html">Project</a></li>
-                    <li class="close_after_click"><a href="../../sub-pages/service/service.html">Service</a></li>
-                    <li class="close_after_click"><a href="../../sub-pages/contact/contact.html">Contact Us</a></li>
+                    <li class="close_after_click"><a href="../service/service.html">Service</a></li>
+                    <li class="close_after_click"><a href="../service/service.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="download_broucher">
