--- a/sub-pages/service/service.html
+++ b/sub-pages/service/service.html
@@ -32,7 +32,8 @@
                     <li><a href="../contact/contact.html">Contact Us</a></li>
                 </ul>
                 <div class="nav_contact">
-                    <button class="btn btn-info">Contact -></button>
+                    <button class="btn btn-danger"><a class="text-white" download
+                            href="../../assets/Devi Electricals portfolio.pdf">Download Brouchere</a></button>
                 </div>
                 <div class="text-white menu-icon">
                     <i class="fa fa-bars" aria-hidden="true"></i>
@@ -40,7 +41,7 @@
             </div>
         </div>
 
-        <!-- NAVIGATION BAR FOR MOBILE VIEW -->
+        <!-- RESPONSIVE NAVIGATION BAR -->
         <div class="nav-container_responsive">
             <div class="headder-responsive_nav">
                 <div class="logo-container">
@@ -53,15 +54,18 @@
 
             <div class="nav-list">
                 <ul class="list-unstyled nav-list">
-                    <li class="close_after_click"><a href="../../index.html">Home</a></li>
+                    <li class="close_after_click"><a href="/devi-electricals-pre-demo/index.html">Home</a></li>
                     <li class="close_after_click"><a href="../../sub-pages/about/about.html">About</a></li>
                     <li class="close_after_click"><a href="../../sub-pages/projects/project.html">Project</a></li>
-                    <li class="close_after_click"><a href="../../service/service.html">Service</a></li>
-                    <li class="close_after_click"><a href="../../contact/contact.html">Contact Us</a></li>
+                    <li class="close_after_click"><a href="../service/service.html">Service</a></li>
+                    <li class="close_after_click"><a href="../service/service.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="download_broucher">
-                <button class="close_after_click"><a href="#">Download Broucher</a></button>
+                <a class="close_after_click" download="../../assets/Devi Electricals portfolio.pdf"
+                    href="../../assets/Devi Electricals portfolio.pdf"><button>Download</button></a>
+                <!-- <button ><a href="">Download
+                        Broucher</a></button> -->
             </div>
             <div class="nav-responsive_info">
                 <h3>Contact Info</h3>
