--- a/sub-pages/about/about.html
+++ b/sub-pages/about/about.html
@@ -34,7 +34,7 @@
                     <li><a href=".././sub-pages/service/service.html">Service</a></li>
                     <li><a href="../../sub-pages/contact/contact.html">Contact</a></li>
                 </ul>
-                <div class="download_broucher">
+                <div class="nav_contact">
                     <button class="btn btn-danger"><a class="text-white" download
                             href="../../assets/Devi Electricals portfolio.pdf">Download Brouchere</a></button>
                 </div>
@@ -147,8 +147,9 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-6">
                             <p class="about_us_text">About Us</p>
-                            <p>Charged with Purpose to Shaping Future of Energy</p>
-                            <p>We more than just a provider of electricity services - we're pioneers in the energy
+                            <h2 class="f42 fw-500">Charged with Purpose to Shaping Future of Energy</h2>
+                            <p class="dull-white f18">We more than just a provider of electricity services - we're
+                                pioneers in the energy
                                 industry,
                                 dedicated to shaping a brighter, more sustainable future for all.</p>
                             <div class="div_with_tick">
@@ -176,8 +177,9 @@
                     </div>
                     <div class="col-md-12 col-lg-6">
                         <p class="about_us_text">About Us</p>
-                        <p>Charged with Purpose to Shaping Future of Energy</p>
-                        <p>We more than just a provider of electricity services - we're pioneers in the energy industry,
+                        <p class="f42 fw-500">Charged with Purpose to Shaping Future of Energy</p>
+                        <p class="dull-white f18">We more than just a provider of electricity services - we're pioneers
+                            in the energy industry,
                             dedicated to shaping a brighter, more sustainable future for all.</p>
                         <div>
                             <div class="d-flex flex-column">
