--- a/sub-pages/projects/project.html
+++ b/sub-pages/projects/project.html
@@ -149,12 +149,12 @@
         </div>
 
         <!-- card click open -->
-        <p class="text-center fade-in my-5 our-company">Our Company</p>
+        <p class="text-center fade-in our-company">Our Company</p>
         <div class="click_card_container">
             <!-- <div class="row"> -->
             <div class="text-center fade-in labour-details_container">
                 <img class="w-100" src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_960_720.jpg" alt="">
-                <p>Profssional Engineers</p>
+                <p class="">Profssional Engineers</p>
                 <p>19</p>
             </div>
             <div class="text-center fade-in labour-details_container">
@@ -550,13 +550,13 @@
         <div class="explore_our_word-container">
             <div class="d-flex flex-column align-items-center header">
                 <h1 class="display-6 fade-in mb-0 mt-3">OUR RECENT WORKS</h1>
-                <p class="fade-in lead mb-4 mt-2">
+                <p class="fade-in lead mb-4 mt-2 container">
                     lightGallery is a feature-rich, modular JavaScript gallery plugin for building beautiful image and
                     video galleries for the web and the mobile
                 </p>
             </div>
             <div class="container-sm">
-                <div class="container">
+                <div class="container my-3">
                     <div class="col-md-10">
                         <div class="gallery-container" id="animated-thumbnails-gallery">
 
