nav bar logo resize

--- a/sub-pages/service/service.html
+++ b/sub-pages/service/service.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="service.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <link rel="stylesheet" href="../../plugins/bootstrap/css/bootstrap.min.css">
     <script src="../../plugins/bootstrap/js/bootstrap.min.js"></script>
@@ -58,7 +60,7 @@
                     <li class="close_after_click"><a href="../../sub-pages/about/about.html">About</a></li>
                     <li class="close_after_click"><a href="../../sub-pages/projects/project.html">Project</a></li>
                     <li class="close_after_click"><a href="../service/service.html">Service</a></li>
-                    <li class="close_after_click"><a href="../service/service.html">Contact Us</a></li>
+                    <li class="close_after_click"><a href="../contact/contact.html">Contact Us</a></li>
                 </ul>
             </div>
             <div class="download_broucher">
@@ -72,13 +74,6 @@
                 <p><i class="fa fa-volume-control-phone" aria-hidden="true"></i>&nbsp; &nbsp; +91 9363318493</p>
                 <p class="mb-4"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
                 </p>
-
-                <h3 class="">Our Location</h3>
-                <p class="mb-4"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; &nbsp;30/1, Vivekanandha
-                    nagar,
-                    Thekkupalayam
-                    (po), CBE
-                    - 20</p>
             </div>
 
             <div class="nav-footer">
