--- a/sub-pages/projects/project.html
+++ b/sub-pages/projects/project.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="project.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../../plugins/jquery/jquery.min.js"></script>
     <link rel="stylesheet" href="../../plugins/bootstrap/css/bootstrap.min.css">
     <script src="../../plugins/bootstrap/js/bootstrap.min.js"></script>
